Remove chewing tobacco ref, update to 1 hour, remove payment method, default to Dark theme

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
 
   <!-- Theme stylesheet (default = Theme #2: ZIP-modern) -->
-  <link id="themeStylesheet" rel="stylesheet" href="css/theme-zip-modern.css" />
+  <link id="themeStylesheet" rel="stylesheet" href="css/theme-card.css" />
 </head>
 <body>
   <a class="skip-link" href="#main">Skip to content</a>
@@ -88,8 +88,7 @@
           </div>
           <div class="card" role="listitem">
             <h3 class="card-title">Appointment-based</h3>
-            <p class="card-text">By appointment only — ~45 minutes, weeknights and weekends available.</p>
-            <p class="card-text muted">Cash and credit card accepted.</p>
+            <p class="card-text">By appointment only — about one hour, weeknights and weekends available.</p>
           </div>
         </div>
       </div>
@@ -110,14 +109,14 @@
           <details class="faq-item">
             <summary>How long does it take?</summary>
             <div class="faq-panel">
-              <p>Plan for about <strong>45 minutes</strong> for intake and the session.</p>
+              <p>Plan for about <strong>one hour</strong> for intake and the session.</p>
             </div>
           </details>
 
           <details class="faq-item">
-            <summary>Can the treatment help me quit chewing tobacco?</summary>
+            <summary>Does the treatment work for other addictions?</summary>
             <div class="faq-panel">
-              <p>Yes. The approach is used for both smoking and chewing tobacco.</p>
+              <p>Yes. The treatment works for addictive behavior in general.</p>
             </div>
           </details>
 
@@ -129,9 +128,9 @@
           </details>
 
           <details class="faq-item">
-            <summary>How many sessions do I need?</summary>
+            <summary>How many treatments do I need?</summary>
             <div class="faq-panel">
-              <p>Many people start with a single session. If you’d like additional support, follow-up sessions can be discussed.</p>
+              <p>Two treatments are included in the price. Most clients find that one treatment is all they need. If a second treatment is necessary, it can be administered up to eight weeks after the initial session.</p>
             </div>
           </details>
 
@@ -150,9 +149,9 @@
           </details>
 
           <details class="faq-item">
-            <summary>What are your hours and what payment methods do you accept?</summary>
+            <summary>What are your hours?</summary>
             <div class="faq-panel">
-              <p>We operate by appointment only and can often accommodate weeknights and weekends. We accept cash and credit card.</p>
+              <p>We operate by appointment only and can often accommodate weeknights and weekends.</p>
             </div>
           </details>
         </div>
@@ -195,7 +194,7 @@
     </div>
   </footer>
 
-  <!-- Floating theme widget -->
+  <!-- Floating theme widget (hidden for now)
   <div class="theme-widget">
     <button
       class="theme-widget-toggle"
@@ -213,11 +212,11 @@
       <fieldset class="theme-widget-fieldset">
         <legend class="sr-only">Theme</legend>
         <label class="theme-widget-option">
-          <input type="radio" name="theme" value="zip-modern" checked />
+          <input type="radio" name="theme" value="zip-modern" />
           <span>Modern</span>
         </label>
         <label class="theme-widget-option">
-          <input type="radio" name="theme" value="card" />
+          <input type="radio" name="theme" value="card" checked />
           <span>Dark</span>
         </label>
         <label class="theme-widget-option">
@@ -227,6 +226,7 @@
       </fieldset>
     </div>
   </div>
+  -->
 
   <!-- Config + tiny vanilla JS (no build tools) -->
   <script src="js/config.js"></script>
